implement categories CRUD and some improvments
